--- a/popular people.html
+++ b/popular people.html
@@ -1067,7 +1067,7 @@
           resultDiv.innerHTML = "Searching...";
 
           const apiKey = "cf324c1862aff1f7ccd25c8e397e7ced";
-          const url = `https://api.themoviedb.org/3/search/person?api_key=cf324c1862aff1f7ccd25c8e397e7ced&query=${encodeURIComponent(
+          const url = `https://api.themoviedb.org/3/search/person?api_key=${apiKey}&query=${encodeURIComponent(
             query
           )}`;
 
